# chrome-version

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.docs.txt  sitemap.xml  techstack.md  techstack.yml
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: cd.yml  check-pr-title.yml  ci.yml  gh-pages.yml  python-publish.yml  release-drafter.yml
changelog/: index.html
chrome_version/: __init__.py  __main__.py  core.py  main.py  resolver.py
docs/: changelog.md  index.md  reference.md
reference/: index.html
search/: search_index.json
src/chrome_version/: __init__.py  __main__.py  cli.py  core.py  main.py
