[project]
name = "chrome-version"
description = "Detect the version of Chrome installed on Windows, Linux, Mac. Cross-platform using Python, native OS detection."
version = "0.3.1"
authors = [
    {name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com"},
]
maintainers = [
    {name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "google chrome version",
    "chrome",
    "google",
    "version",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.0,<4.0"
dependencies = []


[project.urls]
changelog = "https://github.com/hasansezertasan/chrome-version/blob/main/CHANGELOG.md"
documentation = "https://github.com/hasansezertasan/chrome-version#readme"
homepage = "https://github.com/hasansezertasan/chrome-version"
issues = "https://github.com/hasansezertasan/chrome-version/issues"
releasenotes = "https://github.com/hasansezertasan/chrome-version/releases"
source = "https://github.com/hasansezertasan/chrome-version.git"


[project.scripts]
chrome-version = "chrome_version.main:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.ruff]
target-version = "py37"


[tool.ruff.lint]
select = ["ALL"]
