[project]
name = "chrome-version"
description = "Detect the version of Chrome installed on Windows, Linux, Mac. Cross-platform using Python, native OS detection."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
maintainers = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
dynamic = ["version"]
keywords = ["google chrome version", "chrome", "google", "version"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []


[project.urls]
changelog = "https://github.com/hasansezertasan/chrome-version/blob/main/CHANGELOG.md"
documentation = "https://github.com/hasansezertasan/chrome-version#readme"
homepage = "https://github.com/hasansezertasan/chrome-version"
issues = "https://github.com/hasansezertasan/chrome-version/issues"
releasenotes = "https://github.com/hasansezertasan/chrome-version/releases"
source = "https://github.com/hasansezertasan/chrome-version.git"


[project.scripts]
chrome-version = "chrome_version.cli:main"


[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]
trusted-publishing = "always"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.build]
hooks.vcs.version-file = "src/chrome_version/_version.py"


[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"


[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"


[tool.coverage.run]
source_pkgs = ["chrome_version", "tests"]
branch = true
parallel = true
omit = ["src/chrome_version/_version.py"]


[tool.coverage.paths]
chrome_version = ["src/chrome_version", "*/chrome_version/src/chrome_version"]
tests = ["tests", "*/chrome_version/tests"]


[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]


[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
sort_by_size = true


[tool.slotscheck]
strict-imports = false


[tool.ruff]
fix = true
output-format = "full"
preview = true
show-fixes = true
src = ["src", "tests", "examples"]
target-version = "py38"
unsafe-fixes = true


[tool.ruff.analyze]
detect-string-imports = true
preview = true


[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true


[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["COM812", "S404", "S603", "S605", "C901", "T201"]
logger-objects = ["logging_setup.logger"]
preview = true
select = ["ALL"]


[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.ruff.lint.ruff]
parenthesize-tuple-in-subscript = true


[tool.ruff.lint.mccabe]
max-complexity = 5
